Frontend - Fix: People and Planet sort created

--- a/starwars-frontend/src/app/components/planet/planet-table/planet-table.component.html
+++ b/starwars-frontend/src/app/components/planet/planet-table/planet-table.component.html
@@ -7,7 +7,7 @@
         <th>Gravity</th>
         <th>Terrain</th>
         <th>Population</th>
-        <th>Created at <span (click)="onSortChange('createdAt')"><img src="assets/icons/arrow-sort.svg" alt="Sort" title="Sort" /></span></th>
+        <th>Created at <span (click)="onSortChange('created')"><img src="assets/icons/arrow-sort.svg" alt="Sort" title="Sort" /></span></th>
       </tr>
     </thead>
 
