--- a/starwars-frontend/src/app/components/people/people-table/people-table.component.html
+++ b/starwars-frontend/src/app/components/people/people-table/people-table.component.html
@@ -7,7 +7,7 @@
         <th>Mass</th>
         <th>Birth Year</th>
         <th>Gender</th>
-        <th>Created at <span (click)="onSortChange('createdAt')"><img src="assets/icons/arrow-sort.svg" alt="Sort" title="Sort" /></span></th>
+        <th>Created at <span (click)="onSortChange('created')"><img src="assets/icons/arrow-sort.svg" alt="Sort" title="Sort" /></span></th>
       </tr>
     </thead>
 
